networking.tf
resource "azurerm_virtual_network" "example" {
  name                = "terragoat-vn-${var.environment}"
  address_space       = ["10.0.0.0/16"]
  location            = var.location
  resource_group_name = var.rg_name
}

resource "azurerm_subnet" "example" {
  name                 = "terragoat-${var.environment}"
  resource_group_name  = var.rg_name
  virtual_network_name = azurerm_virtual_network.example.name
  address_prefixes     = ["10.0.0.0/24"]
}

resource "azurerm_network_interface" "ni_linux" {
  name                = "terragoat-linux-${var.environment}"
  location            = var.location
  resource_group_name = var.rg_name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.example.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_network_interface" "ni_win" {
  name                = "terragoat-win-${var.environment}"
  location            = var.location
  resource_group_name = var.rg_name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.example.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_network_security_group" "bad_sg" {
  location            = var.location
  name                = "terragoat-${var.environment}"
  resource_group_name = var.rg_name

  security_rule {
    access                 = "Allow"
    direction              = "Inbound"
    name                   = "AllowSSH"
    priority               = 200
    protocol               = "TCP"
    source_address_prefix  = "*"
    source_port_range      = "*"
    destination_port_range = "22-22"
    destination_address_prefix = "*"
  }

  security_rule {
    access                 = "Allow"
    direction              = "Inbound"
    name                   = "AllowRDP"
    priority               = 300
    protocol               = "TCP"
    source_address_prefix  = "*"
    source_port_range      = "*"
    destination_port_range = "3389-3389"
    destination_address_prefix = "*"
  }
}

resource "azurerm_subnet_network_security_group_association" "nsg_link" {
 network_security_group_id = azurerm_network_security_group.bad_sg.id
 subnet_id                 = azurerm_subnet.example.id
}

resource "azurerm_network_watcher" "network_watcher" {
  location            = var.location
  name                = "terragoat-network-watcher-${var.environment}"
  resource_group_name = var.rg_name
}

resource "azurerm_network_watcher_flow_log" "flow_log" {
  enabled                   = true
  network_security_group_id = azurerm_network_security_group.bad_sg.id
  network_watcher_name      = azurerm_network_watcher.network_watcher.name
  resource_group_name       = var.rg_name
  storage_account_id        = azurerm_storage_account.example.id
  retention_policy {
    enabled = false
    days    = 10
  }
}
